[gd_scene load_steps=8 format=3 uid="uid://dsyq76fpuyo7g"]

[ext_resource type="Script" path="res://game/gameplay/editors/ChartEditor.gd" id="1_65usa"]
[ext_resource type="Texture2D" uid="uid://mfo5xdgme5ob" path="res://assets/images/menus/menuDesat.png" id="2_4i8iv"]
[ext_resource type="Texture2D" uid="uid://dgd3qgsia4c7t" path="res://assets/images/menus/chartEditor/tiles.png" id="3_bcqem"]
[ext_resource type="FontFile" uid="uid://bo3t3laebx8h8" path="res://assets/data/fonts/vcr.ttf" id="4_7g1hf"]
[ext_resource type="PackedScene" uid="uid://c0k561r0fvtr5" path="res://game/gameplay/notes/default.tscn" id="4_pifol"]

[sub_resource type="Gradient" id="Gradient_usmy1"]
colors = PackedColorArray(0.619608, 0.619608, 1, 0.137255, 0.858824, 0.858824, 0.658824, 0.137255)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s8de3"]
gradient = SubResource("Gradient_usmy1")
fill_from = Vector2(1, 0)

[node name="ChartEditor" type="Node2D"]
script = ExtResource("1_65usa")

[node name="Sounds" type="Node" parent="."]

[node name="Inst" type="AudioStreamPlayer" parent="Sounds"]

[node name="Voices" type="AudioStreamPlayer" parent="Sounds"]

[node name="Background_Layer" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Background_Layer"]
modulate = Color(0.309804, 0.309804, 0.309804, 0.901961)
position = Vector2(591.63, 331.914)
scale = Vector2(0.99452, 0.994521)
texture = ExtResource("2_4i8iv")
offset = Vector2(48.1492, 31.2569)

[node name="Gradient" type="Sprite2D" parent="Background_Layer"]
position = Vector2(636.5, 360)
scale = Vector2(19.8906, 11.25)
texture = SubResource("GradientTexture2D_s8de3")

[node name="Grid_Layer" type="CanvasGroup" parent="."]

[node name="Grid" type="TextureRect" parent="Grid_Layer"]
modulate = Color(0.603922, 0.639216, 0.968627, 1)
offset_left = 410.0
offset_right = 794.0
offset_bottom = 720.0
texture = ExtResource("3_bcqem")
stretch_mode = 1

[node name="Line_Separator" type="ColorRect" parent="Grid_Layer"]
offset_left = 602.0
offset_top = 3.0
offset_right = 603.0
offset_bottom = 720.0
color = Color(0.639216, 0.666667, 0.968627, 1)

[node name="Rendered_Notes" type="Control" parent="Grid_Layer"]
layout_mode = 3
anchors_preset = 0
offset_left = 410.0
offset_right = 410.0

[node name="default" parent="Grid_Layer/Rendered_Notes" instance=ExtResource("4_pifol")]
position = Vector2(24, 71)
scale = Vector2(0.45, 0.45)

[node name="Strum_LIne" type="ColorRect" parent="Grid_Layer"]
offset_left = 410.0
offset_right = 794.0
offset_bottom = 3.0

[node name="Info_Text" type="Label" parent="Grid_Layer"]
offset_left = 410.0
offset_top = 695.0
offset_right = 793.0
offset_bottom = 716.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "Beat: 0 ~ Step: 0 ~ Section: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI_Layer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Info_Text" type="Label" parent="UI_Layer"]
layout_mode = 0
offset_top = 632.0
offset_right = 200.0
offset_bottom = 716.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "BPM: 100.0
SPEED: 1.0
TIME: 0.00 / 0.00
ZOOM: 1.0x / 3.0x"

[node name="Top_Bar" type="ColorRect" parent="UI_Layer"]
layout_mode = 0
offset_right = 1281.0
offset_bottom = 26.0
color = Color(0, 0, 0, 0.588235)

[node name="File_Button" type="Button" parent="UI_Layer/Top_Bar"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "FILE"
flat = true

[node name="Popup" type="PopupMenu" parent="UI_Layer/Top_Bar/File_Button"]
transparent_bg = true
title = "Chart Editor \"File\" Tab"
position = Vector2i(30, 15)
size = Vector2i(100, 86)
theme_override_constants/v_separation = 8
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
allow_search = false
item_count = 3
item_0/text = "Open"
item_0/id = 0
item_0/disabled = true
item_1/text = "Save"
item_1/id = 1
item_1/disabled = true
item_2/text = "Exit"
item_2/id = 2

[node name="Edit_Button" type="Button" parent="UI_Layer/Top_Bar"]
layout_mode = 0
offset_left = 64.0
offset_right = 119.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "EDIT"
flat = true

[node name="Popup" type="PopupMenu" parent="UI_Layer/Top_Bar/Edit_Button"]
transparent_bg = true
title = "Chart Editor \"Edit\" Tab"
position = Vector2i(80, 15)
size = Vector2i(181, 86)
theme_override_constants/v_separation = 8
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
allow_search = false
item_count = 3
item_0/text = "Redo (Ctrl+Y)"
item_0/id = 0
item_0/disabled = true
item_1/text = "Undo (Ctrl+Z)"
item_1/id = 1
item_1/disabled = true
item_2/text = "Edit Property"
item_2/id = 2
item_2/disabled = true

[node name="Notes_Button" type="Button" parent="UI_Layer/Top_Bar"]
layout_mode = 0
offset_left = 128.0
offset_right = 195.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "NOTES"
flat = true

[node name="Popup" type="PopupMenu" parent="UI_Layer/Top_Bar/Notes_Button"]
transparent_bg = true
title = "Chart Editor \"Notes\" Tab"
position = Vector2i(135, 15)
size = Vector2i(377, 164)
theme_override_constants/v_separation = 8
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
allow_search = false
item_count = 6
item_0/text = "Increase Length (Ctrl+Plus)"
item_0/id = 0
item_0/disabled = true
item_1/text = "Decrease Length (Ctrl+Minus)"
item_1/id = 1
item_1/disabled = true
item_2/text = "Type"
item_2/id = 2
item_2/separator = true
item_3/text = "Change Note Type"
item_3/id = 3
item_4/text = "Alt Animation Note?"
item_4/checkable = 1
item_4/id = 4
item_5/text = "Opponent Ignore Note?"
item_5/checkable = 1
item_5/id = 5

[node name="Play_Button" type="Button" parent="UI_Layer/Top_Bar"]
layout_mode = 0
offset_left = 205.0
offset_right = 260.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "PLAY"
flat = true

[node name="Popup" type="PopupMenu" parent="UI_Layer/Top_Bar/Play_Button"]
transparent_bg = true
title = "Chart Editor \"Play\" Tab"
position = Vector2i(200, 15)
size = Vector2i(251, 60)
theme_override_constants/v_separation = 8
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
allow_search = false
item_count = 2
item_0/text = "Play Here"
item_0/id = 0
item_1/text = "Play from the Start"
item_1/id = 1

[node name="Help_Button" type="Button" parent="UI_Layer/Top_Bar"]
layout_mode = 0
offset_left = 268.0
offset_right = 323.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
text = "HELP"
flat = true

[node name="Popup" type="PopupMenu" parent="UI_Layer/Top_Bar/Help_Button"]
transparent_bg = true
title = "Chart Editor \"Help\" Tab"
position = Vector2i(200, 15)
size = Vector2i(181, 86)
theme_override_constants/v_separation = 8
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_7g1hf")
theme_override_font_sizes/font_size = 20
allow_search = false
item_count = 3
item_0/text = "About Charter"
item_0/id = 0
item_1/text = "About Notes"
item_1/id = 1
item_2/text = "About Engine"
item_2/id = 2

[connection signal="pressed" from="UI_Layer/Top_Bar/File_Button" to="." method="_on_file_button_pressed"]
[connection signal="id_pressed" from="UI_Layer/Top_Bar/File_Button/Popup" to="." method="_on_file_button_pressed"]
[connection signal="pressed" from="UI_Layer/Top_Bar/Edit_Button" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="UI_Layer/Top_Bar/Notes_Button" to="." method="_on_notes_button_pressed"]
[connection signal="pressed" from="UI_Layer/Top_Bar/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI_Layer/Top_Bar/Help_Button" to="." method="_on_help_button_pressed"]
